--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@stefanobartoletti/nuxt-social-share": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "marked": "^14.1.2",
     "nuxt": "^3.13.0",
+    "twemoji": "^14.0.2",
     "vue": "latest",
     "vue-router": "latest"
   },
