--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "deploy": "nuxt build && wrangler pages deploy .output/public"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^6.1.1",
     "@pinia/nuxt": "^0.5.4",
     "@stefanobartoletti/nuxt-social-share": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
+    "feed": "^4.2.2",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "marked": "^14.1.2",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "autoprefixer": "^10.4.20",
+    "nuxt-simple-sitemap": "^4.4.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "wrangler": "^3.78.10"
