--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "deploy": "nuxt build && wrangler pages deploy .output/public"
   },
   "dependencies": {
-    "@auth0/auth0-vue": "^2.3.3",
     "@nuxtjs/sitemap": "^6.1.1",
+    "@nuxtjs/supabase": "^1.4.0",
     "@pinia/nuxt": "^0.5.4",
     "@stefanobartoletti/nuxt-social-share": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "feed": "^4.2.2",
     "html-to-image": "^1.11.11",
-    "html2canvas": "^1.4.1",
     "marked": "^14.1.2",
     "nuxt": "^3.13.0",
     "qrcode.vue": "^3.5.0",
@@ -32,7 +31,6 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "autoprefixer": "^10.4.20",
-    "nuxt-simple-sitemap": "^4.4.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "wrangler": "^3.78.10"
