--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-to-image": "^1.11.11",
     "marked": "^14.1.2",
     "nuxt": "^3.13.2",
+    "nuxt-gtag": "^3.0.1",
     "qrcode.vue": "^3.5.0",
     "twemoji": "^14.0.2",
     "vue": "latest",
