--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-to-image": "^1.11.11",
     "marked": "^14.1.2",
     "nuxt": "^3.13.2",
+    "nuxt-clarity-analytics": "^0.0.9",
     "nuxt-gtag": "^3.0.1",
     "octokit": "^4.0.2",
     "qrcode.vue": "^3.5.0",
