--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "feed": "^4.2.2",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "marked": "^14.1.2",
     "nuxt": "^3.13.2",
     "nuxt-clarity-analytics": "^0.0.9",
