--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vite-pwa/nuxt": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.13",
     "wrangler": "^3.78.10"
   }
